website/src/components/Scholarships/ScholarshipComponent.css
.page-title {
  margin-top: 50px;
  margin-bottom: 30px;
}

.content-box {
  margin-top: 30px;
  margin-bottom: 50px;
}

.scholarship-detail {
  font-size: x-small;
}

.card-img-overlay {
  background-color: rgba(255, 192, 203, 0.8);
  height: auto;
}

a {
  color: var(--text-color);
}

.card-body {
  background-color: var(--background-color);
}
/*
.card {
    width: auto;
    height: 200px;
    position:relative;
  }

  .card-body{
      background-color: rgba(255, 192, 203, 0.8);
    position: absolute;
    top: 50%;
  }

.card img {
    position:absolute;
    }*/

